# http-request-maker

./: .gitignore  README.md  pyproject.toml
src/: __main__.py  app.py
src/config/: static.py
src/dataclasses/: entries.py  labels.py
src/elements/: __init__.py  buttons.py  entries.py  labels.py
src/functions/: submit.py
src/tools/: create_element.py  reduction.py  request.py
