[tool.poetry]
name = "http-requester"
version = "0.1.0"
description = "A simple app for sending http requests"
authors = ["qpyparty <rejzorkalahen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
